tests/fixtures/invalid/hex_none.py
# Cannot call hex() with None
x = hex(None)
